Fix: Path JS to githubpage

--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
         </script>
         <title>Louis DUFOUR</title>
         <meta name="description" content="Louis DUFOUR est un développeur full stack junior qui conçoit des expériences mobiles fluides avec innovation et précision."/>
-        <meta name="image" content="Portefolio/Ressources/images/Lfavicon.png"/>
+        <meta name="image" content="Ressources/images/Lfavicon.png"/>
         <meta property="og:locale" content="FR"/>
         <meta property="og:site_name" content="Louis DUFOUR"/>
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Louis DUFOUR"/>
         <meta property="og:description" content="Louis DUFOUR est un développeur full stack junior qui conçoit des expériences mobiles fluides avec innovation et précision."/>
-        <meta property="og:image" content="Portefolio/Ressources/images/Lfavicon.png"/>
-        <link rel="icon" type="image/png" sizes="512x192" href="Portefolio/Ressources/images/Lfavicon.png"/>
-        <link rel="icon" type="image/png" sizes="192x192" href="Portefolio/Ressources/images/Lfavicon.png"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="Portefolio/Ressources/images/Lfavicon.png"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="Portefolio/Ressources/images/Lfaviconx50.png"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="Portefolio/Ressources/images/Lfaviconx50.png"/>
+        <meta property="og:image" content="Ressources/images/Lfavicon.png"/>
+        <link rel="icon" type="image/png" sizes="512x192" href="Ressources/images/Lfavicon.png"/>
+        <link rel="icon" type="image/png" sizes="192x192" href="Ressources/images/Lfavicon.png"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="Ressources/images/Lfavicon.png"/>
+        <link rel="icon" type="image/png" sizes="32x32" href="Ressources/images/Lfaviconx50.png"/>
+        <link rel="icon" type="image/png" sizes="16x16" href="Ressources/images/Lfaviconx50.png"/>
         <link rel="manifest" href="/favicon/site.webmanifest"/>
         <meta name="msapplication-TileColor" content="#0f172a"/>
         <meta name="theme-color" content="#0f172a"/>
         <meta name="google-site-verification" content="DCl7VAf9tcz6eD9gb67NfkNnJ1PKRNcg8qQiwpbx9Lk"/>
         <meta name="next-head-count" content="29"/>
-        <link rel="preload" href="Portefolio/Ressources/font/730e8169368baf37-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/f1f0c35b32161446-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/ as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/dc792b508e6f91c7-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/84d3493a9fd22f1c-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/fcb100c7607696fd-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/d90f295d0c348006-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/579e0f95cacfae57-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/font/828a494e04a45cbd-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
-        <link rel="preload" href="Portefolio/Ressources/css/b822cfde573c2504.css" as="style"/>
-        <link rel="stylesheet" href="Portefolio/Ressources/css/style.css" data-n-g=""/>
-        <script src="Portefolio/Ressources/js/webpack-5146130448d8adf7.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/framework-2c79e2a64abdb08b.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/main-342b3f0888afe918.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/pages/_app-5531e5a306da5e32.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/664-09cd891ecc3af1d0.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/506-95c309a4d817bb8b.js" defer=""></script>
-        <script src="Portefolio/Ressources/js/pages/index-f96aa925e82cd3c9.js" defer=""></script>
+        <link rel="preload" href="Ressources/font/730e8169368baf37-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/f1f0c35b32161446-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/ as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/dc792b508e6f91c7-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/84d3493a9fd22f1c-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/fcb100c7607696fd-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/d90f295d0c348006-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/579e0f95cacfae57-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/font/828a494e04a45cbd-s.p.woff2" as="font" type="font/woff2" crossorigin="anonymous" data-next-font="size-adjust"/>
+        <link rel="preload" href="Ressources/css/b822cfde573c2504.css" as="style"/>
+        <link rel="stylesheet" href="Ressources/css/style.css" data-n-g=""/>
+        <script src="Ressources/js/webpack-5146130448d8adf7.js" defer=""></script>
+        <script src="Ressources/js/framework-2c79e2a64abdb08b.js" defer=""></script>
+        <script src="Ressources/js/main-342b3f0888afe918.js" defer=""></script>
+        <script src="Ressources/js/pages/_app-5531e5a306da5e32.js" defer=""></script>
+        <script src="Ressources/js/664-09cd891ecc3af1d0.js" defer=""></script>
+        <script src="Ressources/js/506-95c309a4d817bb8b.js" defer=""></script>
+        <script src="Ressources/js/pages/index-f96aa925e82cd3c9.js" defer=""></script>
 
     </head>
     <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
@@ -297,7 +297,7 @@
                                                     class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" 
                                                     style="color:transparent" 
                                                     srcset=""
-                                                    src="Portefolio/Ressources/images/MauiProject.png"/>                                                                                       
+                                                    src="Ressources/images/MauiProject.png"/>                                                                                       
                                             </div>
                                         </li>
                                         <li class="mb-12">
@@ -331,7 +331,7 @@
                                                     class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" 
                                                     style="color:transparent" 
                                                     srcset=""
-                                                    src="Portefolio/Ressources/images/SwiftIPad.png"/>                                                                                       
+                                                    src="Ressources/images/SwiftIPad.png"/>                                                                                       
                                             </div>
                                         </li>
                                         <li class="mb-12">
@@ -365,7 +365,7 @@
                                                     class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" 
                                                     style="color:transparent" 
                                                     srcset=""
-                                                    src="Portefolio/Ressources/images/react-native.png"/>                                                                                       
+                                                    src="Ressources/images/react-native.png"/>                                                                                       
                                             </div>
                                         </li>
                                         <li class="mb-12">
@@ -399,7 +399,7 @@
                                                     class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" 
                                                     style="color:transparent" 
                                                     srcset=""
-                                                    src="Portefolio/Ressources/images/AndroidImage.jpg"/>                                                                                       
+                                                    src="Ressources/images/AndroidImage.jpg"/>                                                                                       
                                             </div>
                                         </li>
                         
