Update(main): naming deployment

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                     <a href="https://tailwindcss.com/" class="font-medium text-slate-400 hover:text-teal-300 focus-visible:text-teal-300" target="_blank" rel="noreferrer noopener" aria-label="Tailwind CSS (opens in a new tab)">Tailwind CSS</a>
                                     , et déployé avec 
                                     <!-- -->
-                                    <a href="https://pages.github.com/" class="font-medium text-slate-400 hover:text-teal-300 focus-visible:text-teal-300" target="_blank" rel="noreferrer noopener" aria-label="CodeFrist (opens in a new tab)">GitHub</a>
+                                    <a href="https://pages.github.com/" class="font-medium text-slate-400 hover:text-teal-300 focus-visible:text-teal-300" target="_blank" rel="noreferrer noopener" aria-label="GitHub (opens in a new tab)">GitHub</a>
                                     . Tout le texte est composé avec la police                                    <!-- -->
                                     <a href="https://rsms.me/inter/" class="font-medium text-slate-400 hover:text-teal-300 focus-visible:text-teal-300" target="_blank" rel="noreferrer noopener" aria-label="Inter (opens in a new tab)">Inter</a>
                                 </p>
